[package]
name = "async_server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.9.0" }
log = { version = "0.4", features = ["std", "serde"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "sync", "rt"] }